--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-name: Your New Jekyll Site
-description: Blogging about stuffs
-meta_description: "Your New Jekyll Site, Blogging about stuffs"
+name: 慢摇哥哥的博客
+description: 云、数据科学、产品设计、和效率
+meta_description: "云、数据科学、产品设计、和效率"
 
 markdown: kramdown
 highlighter: pygments
@@ -12,5 +12,5 @@ google_analytics: 'UA-XXXXXXXX-X'
 gems: [jekyll-paginate]
 
 # Details for the RSS feed generator
-url:            'blog url'
-author:         'Your Name'
+url:            'https://'
+author:         '姚关伟'
