--- a/_config.yml
+++ b/_config.yml
@@ -5,13 +5,16 @@ meta_description: "云、数据科学、产品设计、和效率"
 markdown: kramdown
 highlighter: pygments
 logo: false
-paginate: 3
-baseurl: /
-abouturl: about.html
+paginate: 4
 domain_name: 'http://yourblog-domain.com'
 google_analytics: 'UA-XXXXXXXX-X'
 gems: [jekyll-paginate]
 
+baseurl: /
+abouturl: about.html
+permalink: /:title:output_ext
+
 # Details for the RSS feed generator
 url:            'https://'
 author:         '姚关伟'
+
