--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: false
 paginate: 4
 domain_name: 'http://yourblog-domain.com'
 google_analytics: 'UA-XXXXXXXX-X'
-gems: [jekyll-paginate]
+gems: [jekyll-paginate,jekyll-github-metadata]
 
 baseurl: ''
 abouturl: /about.html
