--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: 慢摇哥哥的博客
-description: 云、数据科学、产品设计、和效率
-meta_description: "云、数据科学、产品设计、和效率"
+description: 数据科学、和产品设计
+meta_description: "数据科学、产品设计、云、和效率"
 
 baseurl: ''
 abouturl: about.html
