--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: 慢摇哥哥的博客
-description: 数据科学、和产品设计
-meta_description: "数据科学、产品设计、云、和效率"
+description: 数据科学和产品设计
+meta_description: "数据科学、产品设计、云和效率"
 
 baseurl: ''
 abouturl: about.html
